--- a/task1.html
+++ b/task1.html
@@ -72,7 +72,7 @@
     <input type="text" id="myEnroll" placeholder="Enter enroll number">
 
     <label for="myCity">City:</label>
-    <input type="text" id="myCity" placeholder="Enter your city">
+    <input type="text" id="myCity" placeholder="Enter your city~">
 
     <!-- Submit Button -->
     <button type="submit" id="mybutton">Submit</button>
