--- a/index.html
+++ b/index.html
@@ -13,11 +13,19 @@
         </tr>
         <tr>
             <td>Feedback form</td>
-            <td><a href="./Task1.html">Task1</a></td>
+            <td><a href="./task1.html">Task1</a></td>
         </tr>
         <tr>
             <td>Resume</td>
-            <td><a href="./Task2.html">Task2</a></td>
+            <td><a href="./task2.js">Task2</a></td>
+        </tr>
+        <tr>
+            <td>Arithmetic Operator</td>
+            <td><a href="./task3.html">Task3</a></td>
+        </tr>
+        <tr>
+            <td>3D Geometry Calculator</td>
+            <td><a href="./task4.html">Task4</a></td>
         </tr>
     </table>
 </body>
