--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
             <td>3D Geometry Calculator</td>
             <td><a href="./task4.html">Task4</a></td>
         </tr>
+        <tr>
+            <td>Two Player Dice Game</td>
+            <td><a href="./task5.html">Task5</a></td>
+        </tr>
+        <tr>
+            <td>Unit converter</td>
+            <td><a href="./task6.html">Task6</a></td>
+        </tr>
+
     </table>
 </body>
 </html>
