--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
             <td>Resume</td>
-            <td><a href="./task2.js">Task2</a></td>
+            <td><a href="./task2.html">Task2</a></td>
         </tr>
         <tr>
             <td>Arithmetic Operator</td>
