changed folder structure

--- a/3D-Geometry/index.html
+++ b/3D-Geometry/index.html
@@ -113,7 +113,7 @@
 <div class="container">
     <!-- Cube Section -->
     <div class="section">
-        <img class="image" src="cube.jpg">
+        <img class="image" src="./images/cube.jpg">
         <h2>Cube</h2>
         <input type="number" id="cubeSide" placeholder="Side Length" />
         <button onclick="calculateCube()">Calculate</button>
@@ -123,7 +123,7 @@
 
     <!-- Sphere Section -->
     <div class="section">
-        <img class="image" src="Sphere.jpg" alt="">
+        <img class="image" src="./images/Sphere.jpg" alt="">
         <h2>Sphere</h2>
         <input type="number" id="sphereRadius" placeholder="Radius" />
         <button onclick="calculateSphere()">Calculate</button>
@@ -133,7 +133,7 @@
 
     <!-- Cylinder Section -->
     <div class="section">
-        <img class="image" src="Cylinder.jpg" alt="">
+        <img class="image" src="./images/Cylinder.jpg" alt="">
         <h2>Cylinder</h2>
         <input type="number" id="cylinderRadius" placeholder="Radius" />
         <input type="number" id="cylinderHeight" placeholder="Height" />
@@ -144,7 +144,7 @@
 
     <!-- Cone Section -->
     <div class="section">
-        <img class="image" src="Cone.jpg" alt="">
+        <img class="image" src="./images/Cone.jpg" alt="">
         <h2>Cone</h2>
         <input type="number" id="coneRadius" placeholder="Radius" />
         <input type="number" id="coneHeight" placeholder="Height" />
@@ -155,7 +155,7 @@
 
     <!-- Rectangular Prism Section -->
     <div class="section">
-        <img class="image" src="Rectangular Prisam.jpg" alt="">
+        <img class="image" src="./images/Rectangular Prisam.jpg" alt="">
         <h2>Rectangular Prism</h2>
         <input type="number" id="rectPrismLength" placeholder="Length" />
         <input type="number" id="rectPrismWidth" placeholder="Width" />
@@ -167,7 +167,7 @@
 
     <!-- Pyramid Section -->
     <div class="section">
-        <img class="image" src="Pyramid.jpg" alt="">
+        <img class="image" src="./images/Pyramid.jpg" alt="">
         <h2>Pyramid</h2>
         <input type="number" id="pyramidBase" placeholder="Base Length" />
         <input type="number" id="pyramidHeight" placeholder="Height" />
@@ -178,7 +178,7 @@
 
     <!-- Tetrahedron Section -->
     <div class="section">
-        <img class="image" src="tetrahedron.jpg" alt="">
+        <img class="image" src="./images/tetrahedron.jpg" alt="">
         <h2>Tetrahedron</h2>
         <input type="number" id="tetrahedronEdge" placeholder="Edge Length" />
         <button onclick="calculateTetrahedron()">Calculate</button>
@@ -188,7 +188,7 @@
 
     <!-- Hemisphere Section -->
     <div class="section">
-        <img class="image" src="Hemisphere.jpg" alt="">
+        <img class="image" src="./images/Hemisphere.jpg" alt="">
         <h2>Hemisphere</h2>
         <input type="number" id="hemisphereRadius" placeholder="Radius" />
         <button onclick="calculateHemisphere()">Calculate</button>
@@ -198,7 +198,7 @@
 
     <!-- Torus Section -->
     <div class="section">
-        <img class="image" src="Torus.jpg" alt="">
+        <img class="image" src="./images/Torus.jpg" alt="">
         <h2>Torus</h2>
         <input type="number" id="torusRadius" placeholder="Radius" />
         <input type="number" id="torusTubeRadius" placeholder="Tube Radius" />
