--- a/resume/index.html
+++ b/resume/index.html
@@ -19,7 +19,7 @@
     <p id="c1"></p>
     <p id="c2"></p>
 
-    <script src="task2.js"></script>
+    <script src="./index.js"></script>
     
 </body>
 </html>
