--- a/Arithmatic-operator/index.html
+++ b/Arithmatic-operator/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Arithmetic Operators</title>
-  <link rel="stylesheet" href="task3.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
 
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <script src="task3.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
