--- a/Dice-game/index.html
+++ b/Dice-game/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Two Player Dice Game</title>
-    <link rel="stylesheet" href="task5.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="container">
@@ -22,6 +22,6 @@
         <div id="winner"></div>
     </div>
 
-    <script src="task5.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
