--- a/Unit-converter/index.html
+++ b/Unit-converter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unit Converter</title>
-   <link rel="stylesheet" href="task6.css">
+   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <div class="container">
@@ -34,6 +34,6 @@
         <div class="result" id="resultOutput"></div>
     </div>
 
-    <script src="task6.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
