--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body >
     <table border="1">
@@ -13,27 +14,27 @@
         </tr>
         <tr>
             <td>Feedback form</td>
-            <td><a href="./task1.html">Task1</a></td>
+            <td><a href="./feedback-form/index.html">Task1</a></td>
         </tr>
         <tr>
             <td>Resume</td>
-            <td><a href="./task2.html">Task2</a></td>
+            <td><a href="./resume/index.html">Task2</a></td>
         </tr>
         <tr>
             <td>Arithmetic Operator</td>
-            <td><a href="./task3.html">Task3</a></td>
+            <td><a href="./Arithmatic-operator/index.html">Task3</a></td>
         </tr>
         <tr>
             <td>3D Geometry Calculator</td>
-            <td><a href="./task4.html">Task4</a></td>
+            <td><a href="./3D-Geometry/index.html">Task4</a></td>
         </tr>
         <tr>
             <td>Two Player Dice Game</td>
-            <td><a href="./task5.html">Task5</a></td>
+            <td><a href="./Dice-game/index.html">Task5</a></td>
         </tr>
         <tr>
             <td>Unit converter</td>
-            <td><a href="./task6.html">Task6</a></td>
+            <td><a href="./Unit-converter/index.html">Task6</a></td>
         </tr>
 
     </table>
