--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             <td>Unit converter</td>
             <td><a href="./Unit-converter/index.html">Task6</a></td>
         </tr>
+        <tr>
+            <td>Random Number Gusses</td>
+            <td><a href="./random-number/task7.html">Task6</a></td>
+        </tr>
 
     </table>
 </body>
