--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         </tr>
         <tr>
             <td>Random Number Gusses</td>
-            <td><a href="./random-number/task7.html">Task6</a></td>
+            <td><a href="./random-number/task7.html">Task7</a></td>
+        </tr>
+        <tr>
+            <td>Random Password Generator</td>
+            <td><a href="./random-password/task8.html">Task8</a></td>
         </tr>
 
     </table>
