--- a/random-password/task8.html
+++ b/random-password/task8.html
@@ -8,11 +8,42 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to the Number Guessing Game!</h1>
-    <p>Click the Start Game</p>
-    <button id="startGame">Start Game</button>
+    <h1>Random Password Generator</h1>
+    <div class="form-group">
+      <label for="length">Password Length (12-64):</label>
+      <input type="number" id="length" min="12" max="64" value="12">
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" id="uppercase" checked>
+        Uppercase Letters
+      </label>
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" id="lowercase" checked>
+        Lowercase Letters
+      </label>
+    </div>
+    
+    <div class="form-group">
+      <label>
+        <input type="checkbox" id="special" checked>
+        Special Characters
+      </label>
+    </div>
+    <div class="form-group">
+      <label>
+        <input type="checkbox" id="numbers" checked>
+        Numbers
+      </label>
+    </div>
+    <button id="generate">Generate Password</button>
+    <div class="output">
+      <strong>Generated Password:</strong>
+      <textarea id="password" readonly></textarea>
+    </div>
   </div>
-
   <script src="./task8.js"></script>
 </body>
 </html>
