--- a/random-number/task7.html
+++ b/random-number/task7.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./task7.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Number Guessing Game</title>
+  <link rel="stylesheet" href="./task7.css">
 </head>
 <body>
-    <script src="./task7.js"></script>
+  <div class="container">
+    <h1>Welcome to the Number Guessing Game!</h1>
+    <p>Click the Start Game</p>
+    <button id="startGame">Start Game</button>
+  </div>
+
+  <script src="./task7.js"></script>
 </body>
 </html>
