--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
             <td>Random Password Generator</td>
             <td><a href="./random-password/task8.html">Task8</a></td>
         </tr>
+        <tr>
+            <td>Panda or Bear Image Classifier</td>
+            <td><a href="./Panda or Bear Image Classifier/task9.html">Task8</a></td>
+        </tr>
 
     </table>
 </body>
