--- a/Panda or Bear Image Classifier/task9.html
+++ b/Panda or Bear Image Classifier/task9.html
@@ -59,6 +59,6 @@
         <div id="myResult" style="margin-bottom: 20px; font-size: 18px; color: #9292cb;"></div>
       </div>
       
-    <script src="./script.js"></script>
+    <script src="./task9.js"></script>
 </body>
 </html>
