--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <td>Panda or Bear Image Classifier</td>
             <td><a href="./Panda or Bear Image Classifier/task9.html">Task9</a></td>
         </tr>
+        <tr>
+            <td>Face-Scan Attendance</td>
+            <td><a href="./Face-Scan attendance/task10.html">Task10</a></td>
+        </tr>
 
     </table>
 </body>
